Ensures hidden write ups do not appear on small screens

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -207,6 +207,9 @@ footer {
         min-height: 600px;
         color: white;
     }
+        .regions {
+        display:none;
+    }
 
 }
 
